# speaking_education_ai

./: .gitignore
client/: package-lock.json
client/src/components/: Homepage.jsx  cards.tsx  navbar.tsx
client/web-app/: README.md  package-lock.json  package.json
client/web-app/public/: index.html
client/web-app/src/: App.js
server/: main.py  pyproject.toml
