[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["DeepeshKalura <deepeshkalurs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
langchain = "^0.1.20"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
